# FishOntario

./: .gitignore  README.md  generate_embeddings.py  main.py  pyproject.toml  railway.json  requirements.txt  vercel.json
.vercel/: project.json
api/: main.py  requirements.txt
utils/: document_loader.py  qa_chain.py
